production-infrastructure/authentik/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-https-redirect
  namespace: authentik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`authentik.mbtux.com`) && PathPrefix(`/outpost.goauthentik.io`)
      priority: 11
      services:
        - name: authentik
          port: 9000
      middlewares:
        - name: authentik-https-redirect
    - kind: Rule
      match: Host(`authentik.mbtux.com`)
      priority: 10
      services:
        - name: authentik
          port: 9000
      middlewares:
        - name: authentik-https-redirect
  tls:
    secretName: tls-authentik
